--- a/nextflow.config
+++ b/nextflow.config
@@ -14,3 +14,13 @@ params {
     // Output directory
     outdir = 'results'
 }
+
+process {
+    withName: 'TRUST4' {
+        container = 'quay.io/biocontainers/trust4:1.0.13--h43eeafb_0'
+    }
+}
+
+docker {
+    enabled = true
+}
