--- a/nextflow.config
+++ b/nextflow.config
@@ -17,7 +17,7 @@ params {
 
 process {
     withName: 'TRUST4' {
-        container = 'quay.io/biocontainers/trust4:1.0.13--h43eeafb_0'
+        container = 'quay.io/biocontainers/trust4:1.1.5--h5ca1c30_0'
     }
 }
 
